환영합니다

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hi,teammates!</h1>
+    <h1>환영합니다!</h1>
+    <p>박성규님</p>
+    <p>최창규님</p>
+    <p>한예진님</p>
 </body>
 </html>
